# yolo26-rust-wasm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FORMATTING.md  METHODOLOGY.md  PRD.md  README.md  index.html
.claude/: settings.local.json
docs/superpowers/plans/: 2026-03-13-yolo26-rust-wasm.md
docs/superpowers/specs/: 2026-03-13-yolo26-rust-wasm-design.md
references/: INDEX.md
scripts/: download_model.sh  export_all_sizes.py  generate_test_fixtures.py  validate_coco_images.py  visualize_comparison.py
src/: lib.rs  postprocess.rs  preprocess.rs
src/model/: backbone.rs  blocks.rs  config.rs  head.rs  mod.rs  neck.rs
tests/: coco_validation.rs  debug_layers.rs  python_comparison.rs
tests/fixtures/: reference_metadata.json  reference_output.safetensors  reference_pre_topk.safetensors
web/public/wasm/: yolo26_rust_wasm.js  yolo26_rust_wasm_bg.wasm
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: confidence-slider.tsx  detection-canvas.tsx  detection-list.tsx  image-dropzone.tsx  model-size-selector.tsx  status-banner.tsx
web/src/lib/: canvas-renderer.ts  colors.ts  types.ts  worker-client.ts
web/src/workers/: inference.worker.ts
