[package]
name = "yolo26-rust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
safetensors = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# No js-sys on native, but we gate usage behind cfg

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "z"
