[package]
name = "yolo26-rust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Apple Accelerate BLAS for faster native CPU inference (not available for WASM)
accelerate = ["candle-core/accelerate"]

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
safetensors = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = 3
